--- a/docs/articles/Spring/自动配置.md
+++ b/docs/articles/Spring/自动配置.md
@@ -2,10 +2,10 @@
 
 # 查看配置的方法
 
-1.   首先找到autoconfigure结尾的包![image-20231231090448039](assets/image-20231231090448039.png)
+1.   首先找到autoconfigure结尾的包![image-20231231090448039](../../public/images/image-20231231090448039.png)
 
-2.   然后打开`META_INF/spring-autoconfigure-metadata.properties`文件，查找对应的自动配置类。![image-20231231092108569](assets/image-20231231092108569.png)
-3.   配置类中包含配置的导入![image-20231231092329375](assets/image-20231231092329375.png)然后就可以看到配置的信息。![image-20231231092404266](assets/image-20231231092404266.png)
+2.   然后打开`META_INF/spring-autoconfigure-metadata.properties`文件，查找对应的自动配置类。![image-20231231092108569](../../public/images/image-20231231092108569.png)
+3.   配置类中包含配置的导入![image-20231231092329375](../../public/images/image-20231231092329375.png)然后就可以看到配置的信息。![image-20231231092404266](../../public/images/image-20231231092404266.png)
 
 # 自动配置原理
 
