--- a/docs/articles/前端/Vue3/事件.md
+++ b/docs/articles/前端/Vue3/事件.md
@@ -41,7 +41,7 @@
 
 ## 声明触发的事件
 
-组件可以显式地通过 [`defineEmits()`](https://cn.vuejs.org/api/sfc-script-setup.html#defineprops-defineemits) 宏来声明它要触发的事件：
+组件可以显式地通过 `defineEmits()` 宏来声明它要触发的事件：
 
 我们在 `<template>` 中使用的 `$emit` 方法不能在组件的 `<script setup>` 部分中使用，但 `defineEmits()` 会返回一个相同作用的函数供我们使用：
 
